--- a/DataflowPipelines/DataflowPipelines.csproj
+++ b/DataflowPipelines/DataflowPipelines.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>DataflowPipelines</Title>
+    <Authors>$(AssemblyName); marekbozik</Authors>
+    <PackageProjectUrl>https://github.com/marekbozik/DataflowPipelines</PackageProjectUrl>
+    <Version>0.0.2</Version>
   </PropertyGroup>
 
 </Project>
